--- a/eleve_ui.ui
+++ b/eleve_ui.ui
@@ -22,34 +22,51 @@
      <height>601</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,8">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,8">
     <property name="spacing">
      <number>6</number>
     </property>
-    <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-     <widget class="QWidget" name="titleWidget" native="true">
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
-        <widget class="QLabel" name="label">
-         <property name="font">
-          <font>
-           <family>Yu Gothic UI</family>
-           <pointsize>24</pointsize>
-           <weight>75</weight>
-           <italic>false</italic>
-           <bold>true</bold>
-           <underline>false</underline>
-           <strikeout>false</strikeout>
-           <stylestrategy>PreferAntialias</stylestrategy>
-          </font>
-         </property>
-         <property name="text">
-          <string>Gestion des Eleves</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="0,10">
+      <property name="rightMargin">
+       <number>120</number>
+      </property>
+      <item>
+       <widget class="QPushButton" name="pushButton_back">
+        <property name="text">
+         <string>BACK</string>
+        </property>
+       </widget>
+      </item>
+      <item alignment="Qt::AlignHCenter">
+       <widget class="QWidget" name="horizontalWidget_2" native="true">
+        <layout class="QHBoxLayout" name="horizontalLayout_13">
+         <item>
+          <widget class="QLabel" name="title">
+           <property name="font">
+            <font>
+             <family>Yu Gothic UI</family>
+             <pointsize>24</pointsize>
+             <weight>75</weight>
+             <italic>false</italic>
+             <bold>true</bold>
+             <underline>false</underline>
+             <strikeout>false</strikeout>
+             <stylestrategy>PreferAntialias</stylestrategy>
+            </font>
+           </property>
+           <property name="text">
+            <string>Gestion des Eleves</string>
+           </property>
+           <property name="margin">
+            <number>15</number>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+     </layout>
     </item>
     <item>
      <widget class="QTabWidget" name="tabWidget">
@@ -123,7 +140,7 @@
              <item row="2" column="0">
               <widget class="QLabel" name="nomLabel">
                <property name="text">
-                <string>Nom</string>
+                <string>Nom :</string>
                </property>
               </widget>
              </item>
@@ -133,7 +150,7 @@
              <item row="3" column="0">
               <widget class="QLabel" name="adresseLabel">
                <property name="text">
-                <string>Adresse</string>
+                <string>Adresse :</string>
                </property>
               </widget>
              </item>
@@ -143,7 +160,7 @@
              <item row="4" column="0">
               <widget class="QLabel" name="dateDeNaissanceLabel">
                <property name="text">
-                <string>Date de Naissance</string>
+                <string>Date de Naissance :</string>
                </property>
               </widget>
              </item>
@@ -153,7 +170,7 @@
              <item row="5" column="0">
               <widget class="QLabel" name="niveauLabel">
                <property name="text">
-                <string>Niveau</string>
+                <string>Niveau :</string>
                </property>
               </widget>
              </item>
@@ -163,7 +180,7 @@
              <item row="6" column="0">
               <widget class="QLabel" name="responsableLegaleLabel">
                <property name="text">
-                <string>Responsable Legale</string>
+                <string>Responsable Legale :</string>
                </property>
               </widget>
              </item>
@@ -183,14 +200,14 @@
               <number>25</number>
              </property>
              <item>
-              <widget class="QPushButton" name="pushButton_2">
+              <widget class="QPushButton" name="pushButton_ajout">
                <property name="text">
                 <string>Ajouter</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton">
+              <widget class="QPushButton" name="pushButton_modifier">
                <property name="text">
                 <string>Modifier</string>
                </property>
@@ -234,19 +251,37 @@
             <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,5,4">
              <item alignment="Qt::AlignHCenter">
               <widget class="QWidget" name="horizontalWidget_2" native="true">
-               <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="2,0">
+               <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0,0">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>80</number>
                 </property>
                 <item>
-                 <widget class="QLabel" name="label_2">
+                 <widget class="QPushButton" name="pushButton_stats">
                   <property name="text">
-                   <string>Cherecher avec L'ID : </string>
+                   <string>Stats</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="lineEdit"/>
+                 <widget class="QPushButton" name="pushButton_refresh">
+                  <property name="text">
+                   <string>REFRESH</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_12">
+                  <item>
+                   <widget class="QLabel" name="label_2">
+                    <property name="text">
+                     <string>Cherecher avec L'ID : </string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="search_field"/>
+                  </item>
+                 </layout>
                 </item>
                </layout>
               </widget>
@@ -272,10 +307,10 @@
                      </widget>
                     </item>
                     <item>
-                     <widget class="QLineEdit" name="lineEdit_2"/>
+                     <widget class="QLineEdit" name="lineEdit_pdf"/>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="pushButton_3">
+                     <widget class="QPushButton" name="pushButton_pdf">
                       <property name="text">
                        <string>PDF</string>
                       </property>
@@ -302,7 +337,28 @@
                      </widget>
                     </item>
                     <item>
-                     <widget class="QComboBox" name="comboBox"/>
+                     <widget class="QComboBox" name="comboBox">
+                      <item>
+                       <property name="text">
+                        <string>Choisir</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>ID</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>Prenom</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>Niveau</string>
+                       </property>
+                      </item>
+                     </widget>
                     </item>
                    </layout>
                   </widget>
@@ -414,7 +470,7 @@
               </layout>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton_6">
+              <widget class="QPushButton" name="pushButton_supprimer">
                <property name="text">
                 <string>Supprimer</string>
                </property>
